--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.1",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.19.0",
     "@thallesp/nestjs-better-auth": "^2.1.0",
     "better-auth": "^1.3.34",
+    "dotenv": "^17.2.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -50,7 +51,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.14.0",
+    "prisma": "^6.19.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
