--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "@prisma/client": "^6.19.0",
     "@thallesp/nestjs-better-auth": "^2.1.0",
     "better-auth": "^1.3.34",
+    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
-    "reflect-metadata": "^0.2.2",
     "lodash": "^4.17.21",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "class-transformer": "^0.5.1",
@@ -62,7 +64,6 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "@types/lodash": "^4.17.20",
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
