--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^11.2.1",
     "@prisma/client": "^6.19.0",
     "@thallesp/nestjs-better-auth": "^2.1.0",
+    "@turf/turf": "^7.3.1",
     "better-auth": "^1.3.34",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
