--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.1",
-    "@prisma/client": "^6.19.0",
+    "@prisma/client": "^7.1.0",
+    "@prisma/adapter-pg": "^7.1.0",
     "@thallesp/nestjs-better-auth": "^2.1.0",
     "@turf/turf": "^7.3.1",
     "better-auth": "^1.3.34",
@@ -57,7 +58,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.19.0",
+    "prisma": "^7.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
