--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
   },
   "dependencies": {
     "@itgorillaz/configify": "^4.0.1",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.1",
-    "@prisma/client": "^7.1.0",
     "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@thallesp/nestjs-better-auth": "^2.1.0",
     "@turf/turf": "^7.3.1",
+    "axios": "^1.13.2",
     "better-auth": "^1.3.34",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
