--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:seed:address-hierarchy": "ts-node scripts/seed-address-hierarchy.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "start:kill": "kill -9 $(lsof -ti :3001) && nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -39,6 +40,7 @@
     "better-auth": "^1.3.34",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
+    "graphql": "^16.12.0",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
