--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - ADMIN_USERNAME=admin
       - ADMIN_EMAIL=admin@screenit.app
       - ADMIN_PASSWORD=Admin123
+      - BOT_BASE_URL=http://localhost:8000
+
     ports:
       - '8080:8080'
 
